Add elo logic
