# api/docs/swagger.json
@@ -418,13 +418,6 @@
                 "email": {
                     "type": "string"
                 },
-                "games": {
-                    "description": "Assuming Employee1ID is the foreign key",
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/Game"
-                    }
-                },
                 "name": {
                     "type": "string"
                 },
@@ -438,9 +431,9 @@
             "type": "object",
             "required": [
                 "employee1ID",
+                "employee1Score",
                 "employee2ID",
-                "winnerFloat",
-                "winnerUuid"
+                "employee2Score"
             ],
             "properties": {
                 "employee1": {
@@ -449,17 +442,17 @@
                 "employee1ID": {
                     "type": "string"
                 },
+                "employee1Score": {
+                    "type": "integer"
+                },
                 "employee2": {
                     "$ref": "#/definitions/Employee"
                 },
                 "employee2ID": {
                     "type": "string"
                 },
-                "winnerFloat": {
+                "employee2Score": {
                     "type": "integer"
-                },
-                "winnerUuid": {
-                    "type": "string"
                 }
             }
         },
